--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Style Sheet references -->
     <link rel="stylesheet" href="./css/base-style.css" />
+    <link rel="stylesheet" href="./css/animations.css" />
     <!-- Javascript scripts reference with deference (apply after loading) -->
     <script src="./js/audio.js" defer></script>
+    <script src="./js/animation-manager.js" defer></script>
+
     <title>Intersectional Observer</title>
   </head>
 
@@ -15,19 +18,21 @@
     <!-- ================================= TITLE ================================= -->
 
     <!-- Title container has an h1 and a button to play some music -->
-    <div class="container green">
+    <div class="container green left-to-right observable">
       <h1>Once upon a time...</h1>
       <button id="start-audio">Want Some Music?</button>
     </div>
 
     <!-- ================================= STORY ================================= -->
       <!-- Story containers all have an image with a caption -->
-      <div class="container blue">
+      <div class="container blue active">
       <img src="pictures/under-skin.webp" />
+      <button id="animator">animate me!</button>
+      <button id="deanimator">reset me!</button>
       <p>Scarlet Johanson was walking round town killing some bad guys</p>
     </div>
 
-    <div class="container green">
+    <div class="container green bottom-zig-zag observable">
       <img src="./pictures/hp.avif" />
       <p>
         But then Voldemort came and he tried to kill her but she was like nuh ha
@@ -35,7 +40,7 @@
       </p>
     </div>
 
-    <div class="container blue">
+    <div class="container blue observable">
       <img src="./pictures/grey-anatomy.webp" />
       <p>
         The medical community was shaken, they couldn't understand what had
